update, add right click, optimize ppt mode swipe

--- a/Handjet/Handjet.vcxproj
+++ b/Handjet/Handjet.vcxproj
@@ -100,6 +100,7 @@
     </ResourceCompile>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <None Include="ClassDiagram1.cd" />
     <None Include="ReadMe.txt" />
     <None Include="res\Handjet.ico" />
     <None Include="res\Handjet.rc2" />
