--- a/Handjet/Handjet.vcxproj.filters
+++ b/Handjet/Handjet.vcxproj.filters
@@ -22,6 +22,7 @@
     <None Include="res\Handjet.ico">
       <Filter>资源文件</Filter>
     </None>
+    <None Include="ClassDiagram1.cd" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Handjet.h">
